fix: update NotFoundPage styles and structure for better layout and visibility

--- a/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
+++ b/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
@@ -30,7 +30,7 @@
 }
 
 .goBack:hover {
-    background: #d4155c;
+    background: #7e0632;
 }
 
 .details {
@@ -84,7 +84,7 @@
 }
 
 .additionalInfo a:hover {
-    background: #d4155c;
+    background: #7e0632;
 }
 
 .castReviewsContainer {
